# argos_simulator

argos_base/: CMakeLists.txt  package.xml
argos_base/launch/: argos_base.launch
argos_control/: CMakeLists.txt  package.xml
argos_control/config/: argos_control_config.yaml  control.yaml  robot_localization.yaml
argos_control/launch/: argos_control.launch
argos_description/: CMakeLists.txt  package.xml
argos_description/config/: joint_names_argos.yaml
argos_description/launch/: argos_description.launch  display.launch  gazebo.launch
argos_description/meshes/: base_link.STL  camera_link.STL  left_front_wheel_link.STL  left_mid_belt_link.STL  left_mid_gear_link.STL  left_mid_wheel_link.STL  left_rear_belt_link.STL  left_rear_gear_link.STL  left_rear_motor_link.STL  left_rear_wheel_link.STL  mast_link.STL  right_front_wheel_link.STL  right_mid_belt_link.STL  right_mid_gear_link.STL  right_mid_wheel_link.STL  right_rear_belt_link.STL  right_rear_gear_link.STL  right_rear_motor_link.STL  right_rear_wheel_link.STL
argos_description/urdf/: argos (copy).urdf  argos.config  argos.csv  argos.sdf  argos.urdf  argos_broke.urdf  argos_description.urdf
argos_gazebo/: CMakeLists.txt  README.md  package.xml
argos_gazebo/launch/: argos_nav_test.launch  argos_test.launch  repeat_tester.sh
argos_gazebo/resources/: argos_nav.rviz  goal_reached.py  lidar_flea  nav_robustness.py  random_waypoints.py  start.xlsx  time_data_type_b.xlsx  time_data_type_c.xlsx  time_data_type_d.xlsx  waypoint_pub.py  waypoints.xlsx
argos_nav/: CMakeLists.txt  fIx_pub.py  package.xml
(+16 files in other folders)
